style.css
@font-face {
    font-family: 'Hubot Sans';
    src:
      url('fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
      url('fonts/Hubot-Sans.woff2') format('woff2-variations');
    font-weight: 200 900;
    font-stretch: 75% 125%;
}

html {
    font-family: 'Hubot Sans';
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}

body {
    margin: 0;
    background: #f2f2f2;
}

.title {
    padding-top: 200px;
    text-align: center;
    align-items: center;
    font-size: 100px;
    font-weight: bold;
}

h3 {
    text-align: center;
    font-size: 30px;
    margin: 0;
    padding-top: 60px;
}

a {
    text-decoration: none;
}

a:link {
    color:#216bd8;
    background-color: transparent;
    text-decoration: none;
}
a:visited {
    color: #2721d8;
    background-color: transparent;
    text-decoration: none;
 }
 a:active {
    color: #216bd8;
    background-color: transparent;
 }

.gallery {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: center;
    align-items: center;
    margin: 80px 0;
}

.content {
    width: 20%;
    margin: 25px;
    box-sizing: border-box;
    float: left;
    text-align: center;
    border-radius: 20px;
    cursor: pointer;
    padding-top: 80px;
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
    0 10px 10px rgba(0, 0, 0, 0.22);
    transition: .4s;
    background: #f2f2f2;
}

.content:hover {
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
    0 3px 6px rgba(0, 0, 0, 0.23);
    transform: translate(0px, -8px);
}

img {
    width: 200px;
    height: 200px;
    text-align: center;
    margin: 0 auto;
    display: block;
}

p {
    text-align: center;
    color: #b2bec3;
    padding-top: 0 8px;
}

h6 {
    font-size: 26px;
    text-align: center;
    color: #222f3e;
    margin: 0;
}

button {
    text-align: center;
    font-size: 28px;
    width: 100%;
    padding: 15px;
    border: 0;
    outline: none;
    cursor: pointer;
    margin-top: 5px;
    border-bottom-right-radius: 20px;
    border-bottom-left-radius: 20px;
    font-weight: bold;
}

@media (max-width: 1200px) {
    .content {
        width: 45%;
    }
}

@media (max-width: 750px) {
    .content {
        width: 100%;
    }
}

